# CG-Learning

./: .gitignore  LICENSE  README.md
Lectures/GAMES101/: ~$MES101笔记.docx
Project/Assignments/Assignment0/: main
Project/Assignments/Assignment0/code/: CMakeLists.txt  main.cpp
Project/Assignments/Assignment1/code/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Project/Assignments/Reference/ShaderTest/TestGL/: TestGL.vcxproj
Project/Assignments/作业0/: main.cpp
